# type-inference-munihac-2022

./: .gitignore  LICENSE  README.md  shell.nix  type-inference-munihac.cabal
src/: Infer.hs  Parser.hs  Repl.hs  Syntax.hs  Types.hs
