cabal-version: 2.2
name: type-inference-munihac
version: 1.1
license: BSD-3-Clause
license-file: LICENSE
author: Andres Löh
maintainer: andres@well-typed.com
copyright: Copyright (c) 2022, Andres Loeh
build-type: Simple

executable infer
  build-depends:
    base,
    containers,
    megaparsec,
    mtl,
    haskeline
  main-is: Infer.hs
  other-modules:
    Parser
    Repl
    Syntax
    Types
  other-extensions:
    FlexibleInstances
    GeneralizedNewtypeDeriving
    InstanceSigs
    TypeSynonymInstances
    TupleSections
  ghc-options: -Wall
  default-language: Haskell2010
  hs-source-dirs: src
